# tiago_sim_integration

./: .gitignore  CMakeLists.txt  INSTALLATION_NOTES  README.md  package.xml  pose.yaml  rcprg_tiago_public-melodic.rosinstall  tiago_inject.sh  tiago_motions_steel.yaml  tiago_motions_titanium.yaml  worlds_tiago_inject.sh
blender_ws/: cabinet_upper.blend  chair.blend  cupboard.blend  desk.blend  dishwasher.blend  glasscase.blend  locker_high.blend  locker_medium.blend  locker_small.blend  rectangle_table.blend  sink.blend  square_table.blend  swivel_chair.blend  tv.blend  wardrobe.blend  work_table.blend
blender_ws/exported/: cupboard.dae  desk.dae  glasscase.dae  locker_high.dae  locker_medium.dae  locker_small.dae  rectangle_table.dae  sink.dae  wardrobe.dae
config/: map_adjustment_tool.rviz  pose.yaml  tiago_motions_extenstion.yaml
config/localization/: amcl.yaml
launch/: map_adjustment_tool.launch  rviz.launch  tiago_gazebo.launch  tiago_gazebo_client.launch  tiago_mapping_public_012.launch  tiago_navigation.launch  tiago_navigation_include.launch  tiago_navigation_public.launch  tiago_navigation_public_012.launch  tiago_navigation_public_012_actor.launch  tiago_navigation_public_012_new.launch  tiago_navigation_willow_garage.launch
maps/012/: map-clean.pgm  map.pgm  map.yaml  map_real.pgm  map_real.yaml  map_tf_sim_to_real.yaml
maps/012_places/: old_places.xml  places.xml
maps/012_real_2024/: map.pgm  map.yaml  map_old.pgm  places.xcf
models/tv/: model.sdf  (+1 more)
move_group_patch/: move_group.launch
scripts/: amcl_params_update.py  amcl_periodic_update.py  map_adjustment_tool.py  rcprg-tiago-install.sh
vmware_rgbd_mods/: _files_location  rgbd_cloud_laser.yaml  rgbd_depth_laser.yaml
worlds/: actor.world  lab_012.world  lab_012_v1.world  lab_012_v1_actor_sitting.world  lab_012_v1_actor_standing.world  lab_012_v1_actor_standing_2.world  lab_012_v2.world  lab_012_v2_actor.world  pal_testing_room.world  willow_garage.world
(+63 files in other folders)
